# task-organizer

./: AVLTree.cpp  AVLTree.hpp  CMakeLists.txt  CTask.cpp  CTask.hpp  CTaskOrganiser.cpp  CTaskOrganiser.hpp  README.md  main.cpp  task.hpp  tutorial.cpp
